# book_recommendation_system_basf

./: .env  .env.example  .env.postgres  .env.sqlite  .gitignore  Book_recommendation.pptx  Dockerfile  README.md  alembic.ini  book_recommendation.db  docker-compose.postgres.yml  docker-compose.sqlite.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 73fb390d1235_fixed_model_detection.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  books.py  google_books.py  tasks.py
app/core/: config.py  security.py
app/crud/: base.py  crud_book.py  crud_review.py
app/db/: base_class.py  init_db.py  models.py  session.py  users.py
app/schemas/: __init__.py  book.py  book_with_reviews.py  google_books.py  review.py
app/services/: book_service.py  google_books_service.py
app/tasks/: celery_app.py  tasks.py
app/tests/: conftest.py  test_book_service.py  test_update_review.py
data/: book_seed.json  books_seed.json
